# union-rep-assistant

./: .gitignore  pyproject.toml  recreate_security_contract_txt.py  requirements.txt  whatpage.ipynb
src/union_rep_assistant/: brain.py  constants.py  utils.py
src/union_rep_assistant/contract/: 2024-2028-RAB-Security-Officers-Owners-Agreement-Executed.txt
src/union_rep_assistant/contract/split_contract/: page_0  page_1  page_10  page_12  page_13  page_14  page_15  page_16  page_17  page_18  page_19  page_2  page_20  page_21  page_22  page_23  page_24  page_25  page_26  page_27  page_28  page_29  page_3  page_30  page_31  page_32  page_33  page_34  page_35  page_36  page_37  page_38  page_39  page_4  page_40  page_41  page_42  page_43  page_44  page_45  (+22 more)
src/union_rep_assistant/faiss_index/: index.faiss  index.pkl
src/union_rep_assistant/ui/: streamlit_app.py  validation.py
src/union_rep_assistant/ui/faiss_index/: index.faiss  index.pkl
