[project]
name = "union-rep-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eduardo Zevallos", email = "eduardolzevallos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.15",
    "streamlit>=1.41.1",
    "langchain-openai>=0.3.1",
    "fitz>=0.0.1.dev2",
    "faiss-cpu>=1.9.0.post1",
    "requests>=2.32.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]

[tool.mypy]
disable_error_code = ["import-untyped"]